# redis-rs

./: Cargo.toml  docker-compose.yaml
client/: Cargo.toml
client/src/: client.rs  echo.rs  main.rs  ping.rs  set.rs
common/: Cargo.toml
common/src/: enums.rs  lib.rs  resp_codec.rs
src/: main.rs  parser.rs  resp_codec.rs
