[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
atoi = "2.0.0"
lexical-core = "0.8.5"
num = "0.4.3"
num-bigint = "0.4.6"
tokio = { version = "1", features = ["full"] }
tokio-util = {  version = "0.7.11", features = ["codec"] }
futures = "0.3.30"
common = { path = "../common" }
clap = { version = "4.5.8", features = ["derive"] }
